samples/_failures_safe/1761338485_659916_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f720fb0c.c: In function ‘main’:
./samples/SAFE/__tmp_f720fb0c.c:149:20: error: missing terminating " character
  149 |             printf("Invalid choice. Please enter 0-4 or -
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_f720fb0c.c:149:13: error: expected expression at end of input
  149 |             printf("Invalid choice. Please enter 0-4 or -
      |             ^~~~~~
./samples/SAFE/__tmp_f720fb0c.c:149:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f720fb0c.c:149:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f720fb0c.c:149:13: error: expected declaration or statement at end of input
